version 1.01 minor fix to spacing between 'erase' and 'set-pixel' buttons for improved visiability in chrome browsers

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,7 +78,7 @@ left:575px;
   position: relative;
   /*z-index: 4;*/
   bottom: 198px;
-  left: 570px;
+  left: 573px;
 }
 
 #twitter {
